# cargo-flutter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cargo.rs  config.rs  engine.rs  error.rs  flutter.rs  lib.rs  main.rs  project.rs  unzip.rs
src/package/: apk.rs  appimage.rs  mod.rs
