[package]
name = "cargo-flutter"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Tool for building flutter-rs projects."
license = "ISC"

[dependencies]
cargo = "0.41.0"
clap = "2.33.0"
copy_dir = "0.1.2"
curl = { version = "0.4.25", features = ["http2"] }
dirs = "2.0.2"
env_logger = "0.7.1"
failure = "0.1.6"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
ureq = { version = "0.11.2", features = ["json"] }
which = "3.1.0"
zip = "0.5.3"
