[package]
name = "cargo-flutter"
version = "0.1.12"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Tool for building flutter-rs projects."
license = "ISC"
repository = "https://github.com/flutter-rs/cargo-flutter"

[dependencies]
android-build-tools = { path = "../../android/android-ndk-rs/android-build-tools" }
cargo-subcommand = "0.3.0"
copy_dir = "0.1.2"
curl = { version = "0.4.25", features = ["http2"] }
dirs = "2.0.2"
env_logger = "0.7.1"
exitfailure = "0.5.1"
failure = "0.1.6"
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
which = "3.1.0"
zip = "0.5.3"
